--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # MySQL Configuration
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dealership
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto=update
