--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # MySQL Configuration
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=mysql://ba85f7d450a19b:c37435b9@us-cdbr-ea
+spring.datasource.username=root
+spring.datasource.password=1234
 
 spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto=update
