--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MySQL Configuration
 
-spring.datasource.url=mysql://ba85f7d450a19b:c37435b9@us-cdbr-ea
+spring.datasource.url=jdbc:mysql://ba85f7d450a19b:c37435b9@us-cdbr-ea
 spring.datasource.username=root
 spring.datasource.password=1234
 
