--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MySQL Configuration
 
-spring.datasource.url=jdbc:mysql://ba85f7d450a19b:c37435b9@us-cdbr-east-04.cleardb.com/heroku_7760563c97aaf3d?reconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dealership
 spring.datasource.username=root
 spring.datasource.password=1234
 
