--- a/src/main/resources/frontend/dealership-app/package.json
+++ b/src/main/resources/frontend/dealership-app/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@rxweb/reactive-form-validators": "^2.1.3",
     "bootstrap": "^4.5.0",
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
