--- a/src/main/resources/frontend/dealership-app/package.json
+++ b/src/main/resources/frontend/dealership-app/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@rxweb/reactive-form-validators": "^2.1.3",
     "bootstrap": "^4.5.0",
+    "jw-angular-pagination": "^1.2.0",
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
